feat: add attraction product page and related components

--- a/translations/en.json
+++ b/translations/en.json
@@ -343,5 +343,45 @@
     "description": "We protect your personal information with the highest standards of security and transparency",
     "effective-from": "Effective from: {date}",
     "navigation-title": "Content"
+  },
+  "AttractionProduct": {
+    "country": "Peru",
+    "view-all-photos": "View all photos",
+    "duration-days-label": "Experience of {quantity, plural, =0 {# days} =1 {# day} other {# days}}",
+    "duration-hours-label": "Experience of {quantity, plural, =0 {# hours} =1 {# hour} other {# hours}}",
+    "reviews-count": "{quantity, plural, =0 {# reviews} =1 {# review} other {# reviews}}",
+    "duration-days": "{quantity, plural, =0 {# days} =1 {# day} other {# days}}",
+    "duration-hours": "{quantity, plural, =0 {# hours} =1 {# hour} other {# hours}}",
+    "about": "Tour Overview",
+    "general-information": {
+      "title": "General Information",
+      "cancellation-policy": "Cancellation policy",
+      "cancellation-policy-not-refound": "This activity is non-refundable. Please confirm your dates before booking.",
+      "refundable": "Refundable up to {duration} before",
+      "duration": "Duración",
+      "duration-days-message": "{quantity, plural, =0 {# days} =1 {# day} other {# days}} complete. Check the availability of start times for your selected date.",
+      "duration-hours-message": "{quantity, plural, =0 {# horas} =1 {# hora} other {# horas}} complete. Check the availability of start times for your selected date.",
+      "guide-languages": "Guide Languages",
+      "pickup-service": "Pickup Service",
+      "start-time": "Start Time",
+      "finish-time": "End time"
+    },
+    "highlights": "Highlights",
+    "itinerary": "Itinerary",
+    "detailed-description": "Detailed description",
+    "important-note": "Important note",
+    "includes": "Includes",
+    "not-included": "Not included",
+    "important-warning": "Advertencia importante",
+    "recommendations": "Recommendations",
+    "additional-advice": "Additional advice",
+    "asked-questions": "Asked questions",
+    "map-video": "Map and Video",
+    "reviews": "Reviews",
+    "from": "From",
+    "you-save-percent": "-{percentage}% discount",
+    "save-money": "Save {amount} in this limited-time offer!",
+    "download-pdf": "Download PDF",
+    "book-now": "Book now"
   }
 }
