--- a/translations/es.json
+++ b/translations/es.json
@@ -344,5 +344,45 @@
     "description": "Protegemos tu información personal con los más altos estándares de seguridad y transparencia",
     "effective-from": "Vigente desde: {date}",
     "navigation-title": "Contenido"
+  },
+  "AttractionProduct": {
+    "country": "Perú",
+    "view-all-photos": "Ver todas las fotos",
+    "duration-days-label": "Experiencia de {quantity, plural, =0 {# dias} =1 {# dia} other {# dias}}",
+    "duration-hours-label": "Experiencia de {quantity, plural, =0 {# horas} =1 {# hora} other {# horas}}",
+    "reviews-count": "{quantity, plural, =0 {# opiniones} =1 {# opinion} other {# opiniones}}",
+    "duration-days": "{quantity, plural, =0 {# dias} =1 {# dia} other {# dias}}",
+    "duration-hours": "{quantity, plural, =0 {# horas} =1 {# hora} other {# horas}}",
+    "about": "Descripción general del tour",
+    "general-information": {
+      "title": "Información General",
+      "cancellation-policy": "Política de cancelación",
+      "cancellation-policy-not-refound": "Esta actividad no es reembolsable. Por favor, asegúrate de tus fechas antes de confirmar la reserva.",
+      "refundable": "Reembolsable total hasta {duration} antes",
+      "duration": "Duración",
+      "duration-days-message": "{quantity, plural, =0 {# dias completos} =1 {# dia completo} other {# dias completos}}. Consulta la disponibilidad de horarios de inicio para tu fecha seleccionada.",
+      "duration-hours-message": "{quantity, plural, =0 {# horas completas} =1 {# hora completa} other {# horas completas}}. Consulta la disponibilidad de horarios de inicio para tu fecha seleccionada.",
+      "guide-languages": "Idiomas del Guía",
+      "pickup-service": "Servicio de Recojo",
+      "start-time": "Hora de Inicio",
+      "finish-time": "Hora de finalización"
+    },
+    "highlights": "Aspectos destacados",
+    "itinerary": "Itinerario",
+    "detailed-description": "Descripcion detallada",
+    "important-note": "Nota importante",
+    "includes": "Incluye",
+    "not-included": "No incluye",
+    "important-warning": "Advertencia importante",
+    "recommendations": "Recomendaciones",
+    "additional-advice": "Consejo adicional",
+    "asked-questions": "Preguntas frecuentes",
+    "map-video": "Mapa y Video",
+    "reviews": "Opiniones",
+    "from": "Desde",
+    "you-save-percent": "-{percentage}% de descuento",
+    "save-money": "¡Ahorra {amount} en esta oferta limitada!",
+    "download-pdf": "Descargar PDF",
+    "book-now": "Reservar ahora"
   }
 }
