feat: add MapVideo component, fix styles & translations in product page

--- a/translations/en.json
+++ b/translations/en.json
@@ -384,6 +384,7 @@
     "you-save-percent": "-{percentage}% discount",
     "save-money": "Save {amount} in this limited-time offer!",
     "download-pdf": "Download PDF",
+    "contact": "Contact",
     "book-now": "Book now"
   }
 }
