--- a/translations/es.json
+++ b/translations/es.json
@@ -385,6 +385,7 @@
     "you-save-percent": "-{percentage}% de descuento",
     "save-money": "¡Ahorra {amount} en esta oferta limitada!",
     "download-pdf": "Descargar PDF",
+    "contact": "Contactar",
     "book-now": "Reservar ahora"
   }
 }
